# bazel-nextjs-example

./: .bazelrc  .eslintignore  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  package.json
.github/workflows/: ci.yaml
frontend/app/: BUILD.bazel  babel.config.js  next.config.js  tsconfig.json
frontend/app/src/pages/: _app.tsx  _document.tsx  index.tsx
tools/: bazel_deps.bzl
